
**Improvements**
* Support arbitrary script categories in the GtkTreeView in script preferences
* Make ONNXHelper slightly more robust (!940)
* Enabled compiler optimizations by inlining many common data conversion functions (!942)
* Use descreening instead of subtraction to generate starnet starmask, for better integration with recomposition tool (!941)

siril 1.4.0-beta4
09/28/25

**Fixes:**
* Fixed incomplete implementation of shared memory bugfix from beta3 (#1719)
* Fixed type hinting in get_seq_frame_header to work with python 3.11 and earlier (scripts #13)
* Fixed a deadlock in the `reloadscripts` command
* Fixed crash with openCV >= 4.12 (#1722, #1723)
* Fixed issue where cold and hot pixels estimation were neve updated (#1724)
* Fixed issue with the way python retrieves the current filename (this could omit the extension in some situations)
* Fixed problems extracting metadata from FITSEQ sequences (#1718, #1720, !915)
* Fixed an issue where an incorrect colourspace transform could be applied when saving a32-bit TIFF (#1730)
* Fixed handling of automatic scripts git repository update flag
* Fixed crash in commands seqpsf and seqtilt when executed from the command line (#1736)
* Fixed crash/memory allocation for stack min or max with 16b images (#1746)
* Fixed magnitude calculation in Dynamic PSF, this affects mostly faint stars for images in 32b (#1739)
* Fixed wrong cache file name (parent directory twice in the returned path) resulting in impossibility to cache files (#1734)
* Fixed handling bayer/Xtrans patterns in more robust way accross the codebase (!903)
* Fixed astrometric alignment for mosaics with some slight skew in the solution (#1747)
* Fixed issues identified by static analysis (!926)
* Fixed issue with findstar command when running from a python script (#1782)
* Fixed issue with auto-applying ICC profiles in stretch tools if nothing is done (reverts correctly) (#1768)