@@ -1,0 +1,110 @@
+name,ra,dec
+Caldwell-1,11.100000,85.333333
+Caldwell-2,3.250000,72.533333
+Caldwell-3,184.175000,69.466667
+Caldwell-4,315.450000,68.200000
+Caldwell-5,56.700000,68.100000
+Caldwell-6,269.650000,66.633333
+Caldwell-7,114.225000,65.600000
+Caldwell-8,22.375000,63.300000
+Caldwell-9,344.200000,62.616667
+Caldwell-10,26.500000,61.250000
+Caldwell-11,350.175000,61.200000
+Caldwell-12,308.700000,60.150000
+Caldwell-13,19.775000,58.333333
+Caldwell-14,35.000000,57.133333
+Caldwell-15,296.200000,50.516667
+Caldwell-16,333.825000,49.883333
+Caldwell-17,8.300000,48.500000
+Caldwell-18,9.750000,48.333333
+Caldwell-19,328.375000,47.266667
+Caldwell-20,314.700000,44.333333
+Caldwell-21,187.050000,44.100000
+Caldwell-22,351.475000,42.550000
+Caldwell-23,35.650000,42.350000
+Caldwell-24,49.950000,41.516667
+Caldwell-25,114.525000,38.883333
+Caldwell-26,184.375000,37.816667
+Caldwell-27,303.000000,38.350000
+Caldwell-28,29.450000,37.683333
+Caldwell-29,197.725000,37.050000
+Caldwell-30,339.275000,34.416667
+Caldwell-31,79.050000,34.266667
+Caldwell-32,190.525000,32.533333
+Caldwell-33,314.100000,31.716667
+Caldwell-34,311.425000,30.716667
+Caldwell-35,195.025000,27.983333
+Caldwell-36,189.000000,27.966667
+Caldwell-37,303.000000,26.483333
+Caldwell-38,189.075000,25.983333
+Caldwell-39,112.300000,20.916667
+Caldwell-40,170.025000,18.350000
+Caldwell-41,66.750000,16.000000
+Caldwell-42,315.375000,16.183333
+Caldwell-43,0.825000,16.150000
+Caldwell-44,346.225000,12.316667
+Caldwell-45,204.375000,8.883333
+Caldwell-46,99.800000,8.733333
+Caldwell-47,308.550000,7.400000
+Caldwell-48,137.575000,7.033333
+Caldwell-49,98.075000,5.050000
+Caldwell-50,98.100000,4.866667
+Caldwell-51,16.200000,2.116667
+Caldwell-52,192.150000,-5.800000
+Caldwell-53,151.300000,-7.716667
+Caldwell-54,120.050000,-10.783333
+Caldwell-55,316.050000,-11.366667
+Caldwell-56,11.750000,-11.883333
+Caldwell-57,296.225000,-14.800000
+Caldwell-58,109.450000,-15.616667
+Caldwell-59,156.200000,-18.633333
+Caldwell-60,180.475000,-18.866667
+Caldwell-61,180.475000,-18.883333
+Caldwell-62,11.775000,-20.766667
+Caldwell-63,337.400000,-20.800000
+Caldwell-64,109.700000,-24.950000
+Caldwell-65,11.900000,-25.283333
+Caldwell-66,219.900000,-26.533333
+Caldwell-67,41.575000,-30.283333
+Caldwell-68,285.475000,-36.950000
+Caldwell-69,258.425000,-37.100000
+Caldwell-70,13.725000,-37.683333
+Caldwell-71,118.075000,-38.550000
+Caldwell-72,3.725000,-39.183333
+Caldwell-73,78.525000,-40.050000
+Caldwell-74,151.925000,-40.433333
+Caldwell-75,246.400000,-40.666667
+Caldwell-76,253.500000,-41.800000
+Caldwell-77,201.375000,-43.016667
+Caldwell-78,272.000000,-43.700000
+Caldwell-79,154.400000,-46.416667
+Caldwell-80,201.700000,-47.483333
+Caldwell-81,261.375000,-48.416667
+Caldwell-82,250.325000,-48.766667
+Caldwell-83,196.350000,-49.466667
+Caldwell-84,206.600000,-51.366667
+Caldwell-85,130.050000,-53.066667
+Caldwell-86,265.175000,-53.666667
+Caldwell-87,48.075000,-55.216667
+Caldwell-88,226.425000,-55.600000
+Caldwell-89,244.725000,-57.900000
+Caldwell-90,140.350000,-58.316667
+Caldwell-91,166.600000,-58.666667
+Caldwell-92,160.950000,-59.866667
+Caldwell-93,287.725000,-59.983333
+Caldwell-94,193.400000,-60.333333
+Caldwell-95,240.925000,-60.500000
+Caldwell-96,119.575000,-60.866667
+Caldwell-97,174.025000,-61.616667
+Caldwell-98,190.575000,-62.966667
+Caldwell-99,193.250000,-63.000000
+Caldwell-100,174.150000,-63.033333
+Caldwell-101,287.450000,-63.850000
+Caldwell-102,160.800000,-64.400000
+Caldwell-103,84.675000,-69.100000
+Caldwell-104,15.800000,-70.850000
+Caldwell-105,194.900000,-70.883333
+Caldwell-106,6.025000,-72.083333
+Caldwell-107,246.450000,-72.200000
+Caldwell-108,186.450000,-72.666667
+Caldwell-109,152.375000,-80.866667
