@@ -37,6 +37,7 @@ static gchar *astro_catalogue[] = {
 		N_("Star Catalogue"),
 		N_("IAU Constellations Catalogue"),
 		N_("IAU Constellations Names"),
+		N_("Caldwell Catalogue"),
 		N_("User Deep Sky Objects Catalogue"),
 		N_("User Solar System Objects Catalogue")
 };
